[gd_scene load_steps=10 format=2]

[ext_resource path="res://Camera.gd" type="Script" id=1]
[ext_resource path="res://Player.gd" type="Script" id=2]
[ext_resource path="res://Mehve.dae" type="PackedScene" id=3]
[ext_resource path="res://LeatherMat.tres" type="Material" id=4]
[ext_resource path="res://MehveMat.tres" type="Material" id=5]
[ext_resource path="res://Person.dae" type="PackedScene" id=6]
[ext_resource path="res://wind.wav" type="AudioStream" id=7]

[sub_resource type="BoxShape" id=3]
extents = Vector3( 5.37893, 0.214846, 1.32876 )

[sub_resource type="SpatialMaterial" id=2]
albedo_color = Color( 0.0745098, 0.388235, 0.988235, 1 )
metallic_specular = 0.44
roughness = 0.85

[node name="Plane" type="RigidBody"]
mass = 1.78163
gravity_scale = 7.0
continuous_cd = true
can_sleep = false
linear_damp = 1.0
angular_damp = 3.0
script = ExtResource( 2 )

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 7 )

[node name="CollisionShape" type="CollisionShape" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0.245589 )
shape = SubResource( 3 )

[node name="Node" type="Node" parent="."]

[node name="Camera" type="Camera" parent="Node"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 4.36216, 12.5515 )
current = true
far = 8192.0
script = ExtResource( 1 )

[node name="Mehve2" parent="." instance=ExtResource( 3 )]

[node name="Cube003" parent="Mehve2" index="0"]
material/0 = ExtResource( 5 )

[node name="Cube002" parent="Mehve2" index="1"]
material/0 = ExtResource( 4 )

[node name="Cube" parent="Mehve2" index="2"]
material/0 = ExtResource( 5 )

[node name="Cube001" parent="Mehve2" index="3"]
material/0 = ExtResource( 5 )

[node name="Spatial" type="Spatial" parent="Mehve2"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.7529, 0 )

[node name="Person" parent="." instance=ExtResource( 6 )]

[node name="Cube004" parent="Person" index="0"]
material/0 = SubResource( 2 )

[editable path="Mehve2"]
[editable path="Person"]
